--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Style Zone</title>
   </head>
-  <body>
+  <body style="background-color: #ececec">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="overlays"></div>
     <div id="root"></div>
